Redesign and lightly revise articles.

--- a/source/articles/other-isomorphic-keyboards.html.md.erb
+++ b/source/articles/other-isomorphic-keyboards.html.md.erb
@@ -1,3 +1,5 @@
+<% partial "/partials/article-layout" do %>
+
 <h1>Other Isomorphic Keyboards</h1>
 
 One of the cardinal sins of productivity is to do what has already been
@@ -6,12 +8,12 @@ traditional keyboard, I appear to have sinned.
 
 Isomorphic keyboards have existed since the the early nineteenth century
 when an isomorphic layout was applied to the button accordions or
-concertina.<sup>1</sup> [Many](http://daskin.com/page2/page2.html)
+concertina.[^1] [Many](http://daskin.com/page2/page2.html)
 [different](http://www.shiverware.com/musixpro/)
 [isomorphic](https://chromatone.jp/online-shop/index.html)
 [keyboards](https://www.dodekamusic.com/stellar/) can be
 purchased today, but instead of purchasing someone else's, I designed
-and built my own.<sup>2</sup>
+and built my own.[^2]
 
 But I would argue that I am not a sinner. Well, at least in this
 particular instance.
@@ -96,6 +98,8 @@ an advantage in the ease of adoption.
 
 
 
-1.  ["Hexagonal isomorphic keyboards in a musical instrument probably stem from the early 19th century accordion or concertina."](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
+[^1]: ["Hexagonal isomorphic keyboards in a musical instrument probably stem from the early 19th century accordion or concertina."](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
-2.  You might have realized that the last link is in fact a link to Dodeka, a company that is selling a Linear Isomorphic Keyboard, which does kind of make  my work somewhat redundant. In my defense, they weren't selling this when I made the LIK.
+[^2]: You might have realized that the last link is in fact a link to Dodeka, a company that is selling a Linear Isomorphic Keyboard, which does kind of make  my work somewhat redundant. In my defense, they weren't selling this when I made the LIK.
+
+<% end %>
