--- a/source/articles/the-experiment.html.md.erb
+++ b/source/articles/the-experiment.html.md.erb
@@ -1,3 +1,5 @@
+<% partial "/partials/article-layout" do %>
+
 # The Experiment
 
 I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard.
@@ -32,9 +34,9 @@ When music is written for an instrument, the composer usually keeps technical li
 
 The rate of improvement is important when evaluating the playability of instruments. If there was an instrument with no technical limitations that could play anything you think of instantaneously, it would be a phenomenal instrument. However, if it took 10,000 hours to just learn to play the C major scale, the same instrument would be considered unplayable.
 
-On a more realistic spectrum, if there was another instrument that could play the same music as another instrument but the instrumentalist would learn twice as fast, the original instrument would be superseded. We place value on time, so the faster the rate of improvement the better.
+For a slightly more realistic example, imagine two instruments, instruments A and B. There is no difference between these instruments except that people improve twice as fast practicing B as they do practicing A. Because it is easier to learn and perform B, I would consider B more playable than A.
 
-Once again, the rate of improvement can be influenced by the expectations that the written music is conforming to. Hannon wrote his finger exercises for the traditional keyboard, so he only wrote music for white notes. Because of this, I fully expect Hannon's exercises to be more difficult for the LIK than the TK, so the LIK's improvement might be slower.
+Once again, the rate of improvement is influenced by the expectations that the written music is conforming to. Hannon wrote his finger exercises for the traditional keyboard, so he only wrote music for white notes. Because of this, I fully expect Hannon's exercises to be more difficult for the LIK than the TK, so the LIK's improvement might be slower.
 
 ## Comparing Playability
 
@@ -54,11 +56,11 @@ I also could choose to have no shared curriculum and instead let each keyboard p
 
 Ultimately, I think that this shared curriculum with the same amount of time allotted to each domain of musical expertise is the best way to allow for both flexibility and fairness.
 
-You can find out more about the curriculum and the reasoning behind it [[here]{.underline}](https://linearisomorphickeyboard.com/articles/the-practice-routine/).
+You can find out more about the curriculum and the reasoning behind it [here](https://linearisomorphickeyboard.com/articles/the-practice-routine/).
 
 ## Evaluation
 
-By the end of the experiment, I will have data that shows how long I played each exercise on each keyboard, what difficulty I can play any given exercise at, and how much practice it took me get to any given difficulty of any exercise on each keyboard. Using this data, I should not only be able to determine how proficient I am at the end of the experiment, but I should be able to measure my rate of improvement for each exercise, and identify technical limitations. You can see this data live [[here]{.underline}](https://linearisomorphickeyboard.com/progress/).
+By the end of the experiment, I will have data that shows how long I played each exercise on each keyboard, what difficulty I can play any given exercise at, and how much practice it took me get to any given difficulty of any exercise on each keyboard. Using this data, I should not only be able to determine how proficient I am at the end of the experiment, but I should be able to measure my rate of improvement for each exercise, and identify technical limitations. You can see this data live [here](https://linearisomorphickeyboard.com/progress/).
 
 I hope that with this data, I will be able to come to a conclusion about the playability of the Linear Isomorphic Keyboard and how it compares to the traditional keyboard.
 
@@ -66,7 +68,7 @@ I hope that with this data, I will be able to come to a conclusion about the pla
 
 In order to have any confidence in the results of the experiment, I need to be aware of the shortcomings of the experiment, and there are plenty of flaws that are substantial enough to deserve recognition.
 
-The study is not blind and only has one participant who is most certainly biased (I think the LIK is awesome). I don't know how much of my improvement on the LIK will be a result of transferable skills on the TK or vice versa. The exercises that I will be practicing for fundamentals were created for the traditional keyboard, and they might not have the same beneficial impact for the LIK<sup>1</sup>. Also, because the exercises were written for the TK, I only expect to find technical limitations for the LIK. In addition, at the outset of the experiment, I will be better at the TK than I will at the LIK; I have played the piano on and off since I was seven, while I played the LIK for no more than twenty minutes before the first assessment (I couldn't resist).
+The study is not blind and only has one participant who is most certainly biased (I think the LIK is awesome). I don't know how much of my improvement on the LIK will be a result of transferable skills on the TK or vice versa. The exercises that I will be practicing for fundamentals were created for the traditional keyboard, and they might not have the same beneficial impact for the LIK.[^1] Also, because the exercises were written for the TK, I only expect to find technical limitations for the LIK. In addition, at the outset of the experiment, I will be better at the TK than I will at the LIK; I have played the piano on and off since I was seven, while I played the LIK for no more than twenty minutes before the first assessment (I couldn't resist).
 
 Another confounding factor will be my own skills, as they can be a limitation for the performance for both keyboards. My ability to play any scale quickly might not be limited by my comfort with the fingerings, but instead by my ability to play anything that quickly. My ability to play either keyboard by ear is limited by my own ear. It might be much easier on one keyboard than the other, but if I can't remember the notes that are played, neither keyboard will do well.
 
@@ -78,4 +80,6 @@ The last confounding variable is the benefit of transferable skills or other del
 
 I have defined playability as the ability to perform a given set of music, measured by technical ceilings and rate of improvement. The experiment I'm running will use the same curriculum for both keyboards, and offer some flexibility in regards to what is practiced on each keyboard in order to keep practice sessions fair, flexible, and measurable. There are flaws and confounding variables in the experiment that are important to consider when analyzing the results. Despite the flaws, I think that the results of this experiment will still be meaningful, and perhaps enough so to teach us about the performance of isomorphic keyboards and encourage more sounds experiments.
 
-1.  Long-tones are an exercise essential for wind instruments, in which the instrumentalist sustains a note to improve their tone quality. This exercise is not nearly as useful on the piano as pianists do not have control over sustained tone. This is an extreme example, but it illustrates that exercises might not benefit each instrument equally. It is not clear whether or not Hannon's finger exercises for piano will provide the same benefit the LIK as they will the traditional piano, or if the LIK will benefit from practicing scales and arpeggios for the same amount of time as the traditional keyboard. This could theoretically put the LIK at a disadvantage, but whether it actually will and to what extent will be difficult to determine.
+[^1]: Long-tones are an exercise essential for wind instruments, in which the instrumentalist sustains a note to improve their tone quality. This exercise is not nearly as useful on the piano as pianists do not have control over sustained tone. This is an extreme example, but it illustrates that exercises might not benefit each instrument equally. It is not clear whether or not Hannon's finger exercises for piano will provide the same benefit the LIK as they will the traditional piano, or if the LIK will benefit from practicing scales and arpeggios for the same amount of time as the traditional keyboard. This could theoretically put the LIK at a disadvantage, but whether it actually will and to what extent will be difficult to determine.
+
+<% end %>
