--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -42,7 +42,7 @@ Below is a graph of all of the twelve intervals within an octave, and all of the
 <% end %>
 
 
-<div class="intervals-shapes-section">
+<div class="intervals-shapes-section breakout">
   <h3 class="intervals-shapes-graph__label">TK</h3>
   <div class="intervals-shapes-graph intervals-shapes-graph--tk">
     <div class="nodes intervals">
@@ -341,7 +341,7 @@ As there are 2.33 times more shapes on the TK than the LIK, I predict that the T
 
 <% end %>
 
-<div class="improvement-chart chart--medium">
+<div class="improvement-chart chart--medium breakout">
 </div>
 
 <% partial "/partials/article-layout" do %>
@@ -392,15 +392,11 @@ Despite this small advantage, I think that the LIK will be worse than the TK at 
 
 I predict that the LIK will improve at 3.58 times the rate of the TK on chromatic patterns and exercises played in every key, and at 2.33 times the rate on all other fundamentals (although the latter will take a while to actualize). I predict that the LIK will perform worse than the TK at sight reading as it will be reading traditional sheet music, which does not elucidate the true interval. Finally, I predict that the LIK will perform at 1.8125 times the rate of the TK at playing by ear.
 
-##### \*\*Notes from 3/24/2019\*\*
+##### NOTES FROM 3/24/2019
 
-I originally published this article on **Add date**, but since then I have heavily revised the article to the point that it has been practically rewritten. Given more time and thought, my hypotheses have changed. I have decided to change my hypotheses while keeping the spirit of the original article. I am not including discoveries that I have had from practicing the keyboards such as the use of solfege in LIK sight reading, or the prevalence of relative tonal identification in playing by ear, but rather I am rewriting the hypotheses with a revisited understanding of what I knew at the time.
+I originally wrote this article on October 17th, 2018, but since then I have heavily revised the article to the point that it has been practically rewritten. Given more time and thought, my hypotheses have changed. I have decided to change my hypotheses while keeping the spirit of the original article. I am not including discoveries that I have had from practicing the keyboards such as the use of solfege in LIK sight reading, or the prevalence of relative tonal identification in playing by ear, but rather I am rewriting the hypotheses with a revisited understanding of what I knew at the time.
 
 In the previous iteration, I predicted that the LIK would outperform the TK on fundamentals, slightly outperform at sight reading, and greatly outperform at playing by ear. For transparency, I'm leaving the original article on the site, so you can read it [here](/articles/the-hypotheses-old).
-
-<% end %>
-
-<% partial "/partials/article-layout" do %>
 
 [^1]: ["Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location."](http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.599.5813)
 
