--- a/source/articles/the-idea.html.md.erb
+++ b/source/articles/the-idea.html.md.erb
@@ -1,4 +1,5 @@
 <% partial "/partials/article-layout" do %>
+
 # The Idea
 
 There may be a better way to design the piano.
@@ -10,9 +11,9 @@ But why is the piano designed this way? At first it may appear that the keyboard
 
 In 1361, Nicholas Faber designed an organ for a church in Haberstaldt, Germany. This organ is the first known application of the traditional keyboard layout we know and use today. A couple significant musical advances occurred between the invention of the Haberstaldt keyboard (which I will call the traditional keyboard) and its implementation on the first piano 350 years later.
 
-Equal temperament was discovered in 1584, which meant that an instrument could be tuned in a way that would allow it to play in any key. Before equal temperament, instruments could only be tuned to play in one key.<sup>1</sup>
+Equal temperament was discovered in 1584, which meant that an instrument could be tuned in a way that would allow it to play in any key. Before equal temperament, instruments could only be tuned to play in one key.[^1]
 
-Throughout the 17th century, Western music transitioned from modality to tonality. To put it way too simply, one of the effects of this switch to tonality was that people wanted to play in more than one key.<sup>2</sup>
+Throughout the 17th century, Western music transitioned from modality to tonality. To put it way too simply, one of the effects of this switch to tonality was that people wanted to play in more than one key.[^2]
 
 The traditional keyboard layout was not designed for beginners, but for a different musical era.
 
@@ -20,13 +21,17 @@ So how can we improve the keyboard? Remove the C major bias and make all keys eq
 
 We can do better. Make all keys equal, and in the process, make all keys the same.
 
+<% end %>
+
 <%= image_tag "LIK-hero.png" %>
+
+<% partial "/partials/article-layout" do %>
 
 This is the Linear Isomorphic Keyboard.
 
-The term isomorphism, when applied to musical instruments, means that any distinct musical phrase---be it a chord or a sonata---can be played the same way regardless of the note that it starts on.<sup>3</sup>
+The term isomorphism, when applied to musical instruments, means that any distinct musical phrase---be it a chord or a sonata---can be played the same way regardless of the note that it starts on.[^3]
 
-What does this mean? On the Linear Isomorphic Keyboard (LIK) there is one way to play all of the major scales. You don't learn to play *a* major scale, you learn how to play *the* major scale. There is only one way to play a perfect fifth, instead of four.<sup>4</sup> If you can play "Für Elise" in one key, you can play it in every key.
+What does this mean? On the Linear Isomorphic Keyboard (LIK) there is one way to play all of the major scales. You don't learn to play *a* major scale, you learn how to play *the* major scale. There is only one way to play a perfect fifth, instead of four.[^4] If you can play "Für Elise" in one key, you can play it in every key.
 
 This has been done before. There are plenty of isomorphic keyboards. Most of them feature a grid of square or hexagonal tiles, with the relation between adjacent tiles determined by particular intervals. But I think that similarities the LIK shares with the traditional keyboard [gives it an edge over other isomorphic keyboards](https://likeyboard.io/articles/other-isomorphic-keyboards/).
 
@@ -54,12 +59,12 @@ If you're still interested, you can read other articles about:
 
 -   [Why not another isomorphic keyboard?](https://likeyboard.io/articles/other-isomorphic-keyboards/)
 
-1.  Here is an example of what it sounds like to play in the wrong key on a non equal temperament keyboard: [https://www.youtube.com/watch?v=Yqa2Hbb\_eIs](https://www.youtube.com/watch?v=Yqa2Hbb_eIs)
+[^1]: Here is an example of what it sounds like to play in the wrong key on a non equal temperament keyboard: [https://www.youtube.com/watch?v=Yqa2Hbb\_eIs](https://www.youtube.com/watch?v=Yqa2Hbb_eIs)
 
-2.  Discussion of the differences between modality and tonality as well as the transition between the two extends far beyond the scope of this article. And this statement is partially false because pre-tonality people played in modes, not keys, and they used harmonizations with notes that didn't occur in the key they played in (if they were playing in keys). To learn a little more check out this: [https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music](https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music). For a deeper dive, with a good look at the transition from modality to tonality, check out this article: [https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer\_research](https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer_research)
+[^2]: Discussion of the differences between modality and tonality as well as the transition between the two extends far beyond the scope of this article. And this statement is partially false because pre-tonality people played in modes, not keys, and they used harmonizations with notes that didn't occur in the key they played in (if they were playing in keys). To learn a little more check out this: [https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music](https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music). For a deeper dive, with a good look at the transition from modality to tonality, check out this article: [https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer\_research](https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer_research)
 
-3.  "Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location." [http://smcnetwork.org/system/files/smc2011\_submission\_169.pdf](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
+[^3]: "Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location." [http://smcnetwork.org/system/files/smc2011\_submission\_169.pdf](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
-4.  The traditional keyboard has four different ways to play a perfect fifth: White key to white key (eg. C -\> G), white key to black key (eg. B -\> F\#), black key to white key (eg. Bb -\> F), and black key to black key (C\# -\> G\#). For more on this, check out [The Experiment](https://likeyboard.io/articles/the-experiment/).
+[^4]: The traditional keyboard has four different ways to play a perfect fifth: White key to white key (eg. C -\> G), white key to black key (eg. B -\> F\#), black key to white key (eg. Bb -\> F), and black key to black key (C\# -\> G\#). For more on this, check out [The Experiment](https://likeyboard.io/articles/the-experiment/).
 
 <% end %>
