--- a/source/articles/the-practice-routine.html.md.erb
+++ b/source/articles/the-practice-routine.html.md.erb
@@ -1,3 +1,5 @@
+<% partial "/partials/article-layout" do %>
+
 # The Practice Routine
 
 ## Developing the curriculum
@@ -57,7 +59,7 @@ won't force myself to practice the same exercise for the same amount of
 time, so each keyboard will be allowed to improve at its own pace. I'm
 going to be alternating the order that I play the keyboards if I play
 both keyboards in the same day to avoid a potentially confounding
-variable.<sup>1</sup>
+variable.[^1]
 
 I have broken up each exercises into a set of incrementing difficulties. For fundamentals this means increasing tempo. The increments are created from my metronome markings, which are increase the speed by about 2-4%. Sight reading and playing by ear is a little bit more complex as increments can change the ambitus and largest intervals as well as the tempo.
 
@@ -124,4 +126,6 @@ curriculum to change throughout the experiment.
 I am using this [Airtable](https://airtable.com/shrjk2lTpQWFpgd26) to keep track of all of my improvement. You can find all of the exercises and all of the increments there. You can find the recording for any practice session [here](https://mega.nz/#F!DPpURACa!FXS_QgmHHKKOW-PCa_wI3A). You can also keep track of my practice sessions from [the practice session section of this site](https://linearisomorphickeyboard.io/practice-sessions).
 
 
-1.  There is a potential confounding variable in the order that I practice the keyboards if I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me already being warmed up. I am going to keep track of each time I practice both keyboards in one day, so the next time I practice both keyboards I can alternate the order.
+[^1]: There is a potential confounding variable in the order that I practice the keyboards if I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me already being warmed up. I am going to keep track of each time I practice both keyboards in one day, so the next time I practice both keyboards I can alternate the order.
+
+<% end %>
