--- a/source/layouts/article-layout.erb
+++ b/source/layouts/article-layout.erb
@@ -1,5 +1,4 @@
 <% wrap_layout :layout do %>
-<div class="article-show">
+<section class="container section article-show">
 <%= yield %>
-</div>
 <% end %>
