--- a/source/stylesheets/custom/_article.css.scss
+++ b/source/stylesheets/custom/_article.css.scss
@@ -1,64 +1,39 @@
-.article-body a {
-  white-space: pre-wrap; /* css-3 */    
-  word-wrap: break-word;
-}
-
-.article-body p {
-  margin: 1rem 0;
-}
-.article-body h1,
-.article-body h2,
-.article-body h3,
-.article-body h4 {
-  margin: 3rem 0 2rem;
-  @media screen and (max-width: 640px) {
-    font-weight: 600;
-  }
-}
-
-.article-body a {
-  text-decoration: underline;
-}
-
 .article-show {
   font-family: Ivar Text;
   font-size: 21px;
   font-weight: 300;
 
-  h1, h2, h3, h4, h5, h6 {
-    font-family: Graphit;
-    font-weight: 400;
-    margin: 4rem 0 2rem;
-  }
   h1 {
-    font-size: 64px;
+    font-family: Graphit;
     font-weight: 700;
-    margin-bottom: 4rem;
+    font-size: 64px;
     // Escape the grid on the right side
     margin-right: calc(-50vw + 50%);
+    margin-bottom: 4rem;
+  }
+  h2, h3, h4, h5, h6 {
+    font-family: Ivar Display;
+    font-weight: 600;
   }
   h2 {
     font-size: 48px;
-    font-weight: 500;
+    margin: 4rem 0 2rem;
   }
   h3 {
-    font-size: 36px;
+    font-size: 32px;
+    margin: 2.5rem 0 1rem;
   }
-  h4 {
-    font-size: 28px;
-  }
-  h5 {
-    font-size: 24px;
-  }
-
-  // ol:last-of-type {
-  //   margin-top: 8rem;
-  //   font-size: 16px;
+  // h4 {
+  //   font-size: 28px;
+  // }
+  // h5 {
+  //   font-size: 24px;
   // }
 
-  .footnotes {
-    margin-top: 8rem;
-    font-size: 16px;
+  a {
+    white-space: pre-wrap; /* css-3 */    
+    word-wrap: break-word;
+    text-decoration: underline;
   }
 
   img {
@@ -66,7 +41,7 @@
   }
 
   p {
-    margin: 2rem 0;
+    margin: 1rem 0;
     line-height: 1.7;
   }
 
@@ -78,36 +53,19 @@
     font-weight: 600;
   }
 
+  ul.ct-legend {
+    margin: 1rem 0;
+  }
+
+  .footnotes {
+    margin-top: 8rem;
+    font-size: 16px;
+  }
 
   // Escaping the layout
-  // .breakout {
-  //   margin-left: calc(-50vw + 50%);
-  //   margin-right: calc(-50vw + 50%);
-
-  //   width: 100vw;
-  //   position: relative;
-  //   margin-left: -50vw;
-  //   height: 100px;
-  //   margin-top: 100px;
-  //   left: 50%;
-  // }
-
-
-  // .row-full{
-  //   width: 100vw;
-  //   position: relative;
-  //   margin-left: -50vw;
-  //   height: 100px;
-  //   margin-top: 100px;
-  //   left: 50%;
-  // }
-
-  // .col > *:not( .test-block ) {
-  //   margin-left: auto;
-  //   margin-right: auto;
-  //   max-width: 50rem;
-  //   padding-left: 5%;
-  //   padding-right: 5%;
-  // }
+  .breakout {
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+  }
 }
 
