--- a/source/articles/the-hypotheses-old.html.md.erb
+++ b/source/articles/the-hypotheses-old.html.md.erb
@@ -10,15 +10,16 @@ I think that the Linear Isomorphic Keyboard (LIK) will outperform the traditiona
 
 The reasonings behind these hypotheses are based on yet another hypothesis: I believe that isomorphic keyboards have an advantage over non-isomorphic keyboards in regards to playability.
 
-**ROUGHLY THE SAME, EXCEPT FOR THE ADVANTAGES**
 
 ## The Isomorphic Instruments
 
-When applied to the keyboard, "Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location."<sup>1\ 2</sup> Each musical pattern only has one shape, regardless of key or location. The LIK and other (equal temperament) isomorphic keyboards have another quality: each shape correlates to one musical pattern.<sup>3</sup>
+**ROUGHLY THE SAME, EXCEPT FOR THE ADVANTAGES**
+
+When applied to the keyboard, "Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location."[^1][^2] Each musical pattern only has one shape, regardless of key or location. The LIK and other (equal temperament) isomorphic keyboards have another quality: each shape correlates to one musical pattern.[^3]
 
 This one-to-one correlation of shapes to sounds provides an advantage for the LIK. The implications are far reaching and amorphous, but I have done my best to break the idea down into three advantages the transpositional, the observational, and the rudimentary.
 
-**EVERYTHING BELOW IS DIFFERENT SAVE FOR THE PREDICTIONS OF FUNDAMENTALS AND PLAYING BY EAR**
+**EVERYTHING BELOW IS DIFFERENT. PREDICTIONS OF FUNDAMENTALS AND PLAYING BY EAR ARE SIMILAR**
 
 ### The transpositional advantage
 
@@ -385,24 +386,24 @@ I think that the rudimentary advantage of isomorphic keyboards will make playing
 
 I believe that isomorphic keyboard have advantages with transposing, recognizing musical patterns, and calculating shapes for musical patterns (the rudimentary advantage). Because of these hypothetical advantages, I predict that the LIK will outperform the TK on fundamentals (transpositional advantage), perform slightly worse before slowly improving to be equal to the TK on sight reading (no clear advantages), and outperform significantly at playing by ear thanks to the rudimentary advantage.
 
-1.  ["Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location."](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
+[^1]: ["Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location."](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
-2.  There are competing definitions of isomorphism, and according to some the LIK isn't truly isomorphic. Wikipedia's definition [https://en.wikipedia.org/wiki/Isomorphic\_keyboard](https://en.wikipedia.org/wiki/Isomorphic_keyboard) , which I assume uses this article as a source [https://www.mitpressjournals.org/doi/pdf/10.1162/comj.2007.31.4.15](https://www.mitpressjournals.org/doi/pdf/10.1162/comj.2007.31.4.15) asserts that isomorphic keyboards must be tuning invariant, which the LIK is not (the LIK is only isomorphic for equal tone temperaments). I intend on exploring this more fully in the future.
+[^2]: There are competing definitions of isomorphism, and according to some the LIK isn't truly isomorphic. Wikipedia's definition [https://en.wikipedia.org/wiki/Isomorphic\_keyboard](https://en.wikipedia.org/wiki/Isomorphic_keyboard) , which I assume uses this article as a source [https://www.mitpressjournals.org/doi/pdf/10.1162/comj.2007.31.4.15](https://www.mitpressjournals.org/doi/pdf/10.1162/comj.2007.31.4.15) asserts that isomorphic keyboards must be tuning invariant, which the LIK is not (the LIK is only isomorphic for equal tone temperaments). I intend on exploring this more fully in the future.
 
-3.  Geometry or shape, when applied to keyboards describes the shape made by the physical location of the keys. Fingering describes how and with what fingers this shape is played. In this example, the shape of the notes is the same, the first five notes of the major scale. The typical fingering is to play this with all five fingers 1-2-3-4-5.
+[^3]: Geometry or shape, when applied to keyboards describes the shape made by the physical location of the keys. Fingering describes how and with what fingers this shape is played. In this example, the shape of the notes is the same, the first five notes of the major scale. The typical fingering is to play this with all five fingers 1-2-3-4-5.
 
-<div>
-<img src="/images/first-fingering.svg" style="width: 50%; margin: 0 0 2rem;" />
-</div>
+    <div>
+    <img src="/images/first-fingering.svg" style="width: 50%; margin: 0 0 2rem;" />
+    </div>
 
-But if you wanted to complete the major scale, you would finger the same shape as 1-2-3-1-2, so that you could finish the scale with 3-4-5.
+    But if you wanted to complete the major scale, you would finger the same shape as 1-2-3-1-2, so that you could finish the scale with 3-4-5.
 
-<div>
-<img src="/images/second-fingering.svg" style="margin: 0 0 2rem;"/>
-</div>
+    <div>
+    <img src="/images/second-fingering.svg" style="margin: 0 0 2rem;"/>
+    </div>
 
-The shape is the same, but the fingering is different.
+    The shape is the same, but the fingering is different.
 
-<% end %>
+    <% end %>
 
 <script src="/javascripts/pages/the-hypotheses.js"></script>
